[package]
name = "acend-adapters"
version.workspace = true
edition.workspace = true

[dependencies]
acend-core = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
orca_whirlpools = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
